--- a/profile.html
+++ b/profile.html
@@ -88,31 +88,27 @@
         </svg>
         <div class="mainProfile__paragraph__debutDiv">
             <div class="mainProfile__paragraph__debutDiv__debut">
+                <p class="mainProfile__paragraph__debutDiv__debut__debutWord">Debut</p>
+                <p class="mainProfile__paragraph__debutDiv__debut__date">26.05.15</p>
+                <p>Seventeen debuted on 26<sup>th</sup> May, 2015 with their mini-album 17 Carat including title track Adore U.</p>
+                <img class="mainProfile__paragraph__debutDiv__debut__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
                 <!-- <p class="mainProfile__paragraph__debutDiv__debut__debut">Debut</p> -->
             </div>
         </div>
-        <div class="mainProfile__paragraph__debutdate">
-            <p class="mainProfile__paragraph__debutdate__date">26.05.15</p>
+        <!-- <div class="mainProfile__paragraph__debutdate">
+            <p class="mainProfile__paragraph__debutdate__date">26.05.15</p> -->
             <!-- <p class="mainProfile__paragraph__debutdate__date">2015 05 26</p> -->
             <!-- <p>Seventeen debuted on <span class="mainProfile__paragraph__debutdate__date">26th of May, 2015</span> with their mini-album <span class="mainProfile__paragraph__debutdate__album">17 Carat</span> including title track <span class="mainProfile__paragraph__debutdate__title_track">Adore U</span>.</p> -->
             <!-- <p>Seventeen debuted with their mini-album <span class="mainProfile__paragraph__debutdate__album">17 Carat</span> including title track <span class="mainProfile__paragraph__debutdate__title_track">Adore U</span>.</p> -->
-            <p>Seventeen debuted on 26<sup>th</sup> May, 2015 with their mini-album 17 Carat including title track Adore U.</p>
+            <!-- <p>Seventeen debuted on 26<sup>th</sup> May, 2015 with their mini-album 17 Carat including title track Adore U.</p> -->
             <!-- <p>26/05/2015</p> -->
-        </div>
-        <div class="mainProfile__paragraph__debutImages">
+        <!-- </div> -->
+        <!-- <div class="mainProfile__paragraph__debutImages">
+            <img class="mainProfile__paragraph__debutImages__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+            <img class="mainProfile__paragraph__debutImages__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+            <img class="mainProfile__paragraph__debutImages__image"  src="images/attacca_group_photo_3.jpg" alt="">
+                 -->
             <!-- <p>26th May, 2015</p> -->
-            <p class="mainProfile__paragraph__debutImages__para"> 
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/attacca_group_photo_3.jpg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/attacca_group_photo_3.jpg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
-                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
-            </p>
             <!-- <p class="mainProfile__paragraph__debutImages__para"> 
                 <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
                 <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
@@ -125,7 +121,19 @@
                 <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
                 <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
             </p> -->
-        </div>
+            <!-- <p class="mainProfile__paragraph__debutImages__para"> 
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/attacca_group_photo_3.jpg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/attacca_group_photo_3.jpg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_2.jpeg" alt="">
+                <img class="mainProfile__paragraph__debutImages__para__image"  src="images/svt_attacca_half_group_1.jpeg" alt="">
+            </p> -->
+        <!-- </div> -->
         <div class="mainProfile__paragraph__fandom">
             <p>Carat</p>
         </div>
